welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: not found: value getHauteurMonde
	for(i<-0 to getHauteurMonde()-1){
                    ^