welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var T = new Array[Color](getMondeHauteur());
for(i<-0 to getMondeHauteur()-1){
	T(i)=getCouleurSol();
	avance();
}
for(n<-0 to getMondeHauteur()-1){
	gauche();avance();droite();
	for(i<-0 to getHauteurMonde()-1){
		setCouleurBrosse(T(i));
		baisseBrosse();
		leveBrosse();
		avance();
	}
}
}
